sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value ecart
  ecart = (ecart.toDouble /1.3).toInt  
  ^