sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  ecart = (ecart.toDouble /1.3).toInt  
}